--- a/Less/contact.less
+++ b/Less/contact.less
@@ -4,11 +4,11 @@
     .center();
     display:flex;
     justify-content: space-around;
-    padding-right: 20px;
+    padding-right: 5%;
 
     .contact {
         width: 70%;
-        padding: 40px;
+        padding: 4%;
         background: @beige;
 
             h1{
@@ -41,8 +41,8 @@
                 text-align: left;
 
                 input[type="text"], input[id="first"] {
-                        padding: 10px 100px; 
-                        margin: 20px 10px;
+                        padding: 1% 13%; 
+                        margin: 20px 7px;
                         border-radius: 10px;
                         background: bisque;
                         color: @purple;
@@ -51,7 +51,7 @@
                     }
 
                 input[type="text"], input[id="last"] {
-                        padding: 10px 100px; 
+                        padding: 1% 13%; 
                         margin: 20px 10px;
                         border-radius: 10px;
                         background: bisque;
@@ -59,7 +59,7 @@
                         font-size: 1.3rem;
                     }
                 input[type="email"] {
-                        padding: 10px 100px; 
+                        padding: 1% 13%; 
                         margin: 20px 10px;
                         border-radius: 10px;
                         background: bisque;
@@ -68,7 +68,7 @@
                     }
 
                 input[type="tel"] {
-                        padding: 10px 100px; 
+                        padding: 1% 13%; 
                         margin: 20px 10px;
                         border-radius: 10px;
                         background: bisque;
@@ -77,7 +77,7 @@
                     }
 
                  input[type="textarea"] {
-                        padding: 100px 290px; 
+                        padding: 20% 38%; 
                         margin: 20px 10px;
                         border-radius: 10px;
                         background: bisque;
@@ -226,3 +226,9 @@
     }
 
  }
+
+//  tablet view
+
+@media @tablet {
+    
+}
