--- a/Less/global.less
+++ b/Less/global.less
@@ -14,6 +14,9 @@
   
   html, body {
     font-family: 'Roboto', sans-serif;
+    // to disable horizontal scrolling
+    max-width: 100%;
+    overflow-x: hidden;
   }
   
   h1, h2, h3, h4, h5 {
