--- a/Less/navigation.less
+++ b/Less/navigation.less
@@ -11,7 +11,7 @@
 
    
     img {
-        width: 250px;
+        width: 20%;
         height: auto;
         margin-left: 5%;
     }
@@ -22,6 +22,8 @@
         align-items: center;
         justify-content: space-between;
         .center();
+        padding-right: 3%;
+        padding-left: 10%;
         
 
 
@@ -30,24 +32,29 @@
             font: @font;
             color: @beige;
             text-decoration: none;
-            font-size: 1.5rem;
+            font-size: 1.3rem;
             align-content: space-between;
             align-items: center;
             padding-top: 10px;
-            padding-right: 80px;
+            padding-right: 10%;
             .center();
 
            
         }
 
+        a:nth-last-child(-n+3){
+            white-space: nowrap;
+        }
+
         a:last-child {
             border: 1px solid @purple;
-            padding: 1.3rem;
+            padding: 1rem 3rem;
             margin-top: 10px;
             border-radius: 10px;
-            margin-right: 80px;
+            margin-right: 10%;
             align-items: center;
             .center();
+            white-space: nowrap;
 
         }
 
@@ -59,6 +66,72 @@
 
     }
 
+}
+
+// tablet view
+
+@media @tablet {
+    .nav-header{
+        
+    
+       
+        img {
+            width: 15%;
+            height: auto;
+            margin-left: 2%;
+        }
+       
+        nav {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            .center();
+            padding-right: 2%;
+            padding-left: 8%;
+            
+    
+    
+    
+            a {
+                font: @font;
+                color: @beige;
+                text-decoration: none;
+                font-size: 1.1rem;
+                align-content: space-between;
+                align-items: center;
+                padding-top: 10px;
+                padding-right: 8%;
+                .center();
+    
+               
+            }
+    
+            a:nth-last-child(-n+3){
+                white-space: nowrap;
+            }
+    
+            a:last-child {
+                border: 1px solid @purple;
+                padding: 1rem 1.8rem;
+                margin-top: 10px;
+                border-radius: 10px;
+                margin-right: 8%;
+                align-items: center;
+                .center();
+                white-space: nowrap;
+    
+            }
+    
+            a:last-child:hover{
+                background: @beige;
+                color: @purple;
+                border: 1px solid @beige;
+            }
+    
+        }
+    
+    }
 }
 
 
